--- a/whatwedo.html
+++ b/whatwedo.html
@@ -120,14 +120,13 @@
 
 <!--OUR COMPANY-->
 <div class="mainwhatwedo">
-<h1 class="p-5">WHAT WE DO</h1>
+<h1 class="">WHAT WE DO</h1>
 </div>
 
-
-<h4 class="whatwedo2 text-center p-3 mt-5 font-weight-bold">PRODUCT AND SERVICES</h4>
+<div class="whatwedo2 ">
+<h4 class="text-center p-3 mt-5 font-weight-bold">PRODUCT AND SERVICES</h4>
 <p class="text-center p-3 font-weight-bold">We offer the following solutions and services to agencies, governments, businesses and individuals.</p>
-
-
+</div>
 <div class="container grid services-items">
 <div class="d-flex mb-2 service-item">
   <img src="service img/GEOAI.png" alt="">
@@ -168,7 +167,7 @@
   </div>
 </div>
 </div>
-
+<hr>
 
 
 
