--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Our Company</title>
@@ -337,4 +337,4 @@ container bg-dark text-white btn-cta p-4 my-5 text-center products-services">
       crossorigin="anonymous"
     ></script>
   </body>
-</html>
+</html> -->
