--- a/index.html
+++ b/index.html
@@ -109,10 +109,23 @@
             >Contact Us</a
           ></li>
           <!--language-->
-        <a href="#" class="lang">en</a>
+        <li><a href="#" class="lang p">en</a></li>
 </nav>
 
-
+<!-- LANDING -->
+<div class="jumbotron landing"> 
+  <div class="spinner-grow" style="color: #3da8e0;"></div>
+  <div class="spinner-grow" style="color:white;"></div>
+  <div class="spinner-grow" style="color:#163d52;"></div>
+    <div class="landing-items">
+    <h1 class="display-3 text-center">WELCOME TO AIQ</h1>
+    <p class="text-center justify-content-left landing-item">We are building solutions to tomorrow's challenges today <br>using geopspatial artificial intelligence.</p>
+    
+    <p class="text-center">
+      <a class="btn btn-lg " href="whatwedo.html" role="button">See how</a>
+    </p>
+  </div>
+  </div>
 
 
 
@@ -123,20 +136,7 @@
 
 </section>
 
-<!-- LANDING -->
-<div class="jumbotron landing"> 
-<div class="spinner-grow" style="color: #3da8e0;"></div>
-<div class="spinner-grow" style="color:white;"></div>
-<div class="spinner-grow" style="color:#163d52;"></div>
-  <div class="landing-items">
-  <h1 class="display-3 text-center">WELCOME TO AIQ</h1>
-  <p class="text-center justify-content-left landing-item">We are building solutions to tomorrow's challenges today <br>using geopspatial artificial intelligence.</p>
-  
-  <p class="text-center">
-    <a class="btn btn-lg " href="whatwedo.html" role="button">See how</a>
-  </p>
-</div>
-</div>
+
 
 
     <!--HOMEPAGE ABOUT-->
