--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <!--service-heading------>
       <div class="s-heading">
         <h1>Services</h1>
-        <p>Here Are The Service Which We Provide You</p>
+        <p>Here Are The Services And Solutions Which We Provide You</p>
       </div>
       <!--services-box-container-->
       <div class="s-b-container">
@@ -262,10 +262,10 @@
           <!--services-box-img-->
           <div class="s-b-img">
             <!--type---------->
-            <div class="s-type">SEO</div>
+            <div class="s-type">HRSI</div>
             <!--img------>
             <img
-              src="images/nordwood-themes-ubIWo074QlU-unsplash.jpg"
+              src="images2/nasa-Yj1M5riCKk4-unsplash.jpg"
               alt=""
               width=""
             />
@@ -274,74 +274,105 @@
           <!--services-box-text-->
           <div class="s-b-text">
             <a href="#"
-              >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum
-              veniam quae repellat est. Vel facilis tenetur error porro dolores
-              perferendis.</a
+              >High resolution satellite imagery that can be used to improve decision making in all aspects of living ranging from Defence, environment and climate, agriculture, infrastructure engineering and government.</a
             >
           </div>
         </div>
       </div>
     </section>
-<br>
 
-<!--service-content-->
-<section class="grid-content service">
-  <h2 class="text-center p-3"> <img src="icons/services icon.svg" alt="service icon" style="width: 50px;" class=""> SERVICES</h2>
-<div class="grid-container grid-service">
-  <div class="column service-item"><h4>GEOAI</h4>
-    <p>Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p></div>
+    <section id="services2">
+      <!--service-heading2-->
+      <!--services-box-container2-->
+      <div class="s-b-container">
+        <!--box-1-->
+        <div class="s-box">
+          <!--services-box-img-->
+          <div class="s-b-img">
+            <!--type---------->
+            <div class="s-type">Data Portal</div>
+            <!--img------>
+            <img
+              src=""
+              alt=""
+              width=""
+            />
+          </div>
+          <!--services-box-text-->
+          <div class="s-b-text">
+            <a href="#"
+              >
+              Vulnerability Assessment and Penetration Testing</a
+            >
+          </div>
+        </div>
 
-  <div class="column service-item"><h4>GIDAD</h4>
-    <p>
-      Geospatial Intelligence and Data Analysis Database (focus on Geospatial Analysis and Workspaces for teams)
-       </P></div>
+        <!--box-2-->
+        <div class="s-box">
+          <!--services-box-img-->
+          <div class="s-b-img">
+            <!--type---------->
+            <div class="s-type">SKY-MAKE</div>
+            <!--img------>
+            <img
+              src="images2/markus-winkler-f57lx37DCM4-unsplash.jpg"
+              alt=""
+              width=""
+            />
+          </div>
+          <!--services-box-text-->
+          <div class="s-b-text">
+            <a href="#"
+              >Machine Learning And Knowledge Extraction</a>
+          </div>
+        </div>
 
-  <div class=" column service-item"><h4>HRSI</h4>
-    <p>
-High resolution satellite imagery that can be used to improve decision making in all aspects of living ranging from Defence, environment and climate, agriculture, infrastructure engineering and government.
-</div>
+        <!--box-3-->
+        <div class="s-box">
+          <!--services-box-img-->
+          <div class="s-b-img">
+            <!--type---------->
+            <div class="s-type">DATA-CAMP</div>
+            <!--img------>
+            <img
+              src="images2/chris-liverani-dBI_My696Rk-unsplash.jpg"
+              alt=""
+              width=""
+            />
+          </div>
 
-  <div class="column service-item"><h4>DATA-CAMP</h4><p>
-    Data Collection, Analysis and Mapping Platform Data Dashboards and Collection Interface</p></div>
-  
-  </div>
-  <div class="d-flex justify-content-center  p-4 ">
-  <a href="whatwedo.html"><button class="btn btn-readMore">Read more..</button></a></div>
+          <!--services-box-text-->
+          <div class="s-b-text">
+            <a href="#"
+              >Data Collection, Analysis and Mapping Platform Data Dashboards and Collection Interfaces</a
+            >
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <!--ourstory--------------->
+<section id="ourstory">
+<div class="m-5 ourstory-text">
+    <h2>OUR STORY</h2>
+    <iframe  src="https://www.youtube.com/embed/FpB1y-dZKqM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" width="" allowfullscreen ></iframe>
+    <p>AIQ was founded on a vison that is transforming the world using 
+      geospatial artificial intelligence to
+      provide solutions to government, business security agencies and more.</p>
+      <button href="about.html" class="btn btn-read">Read More</button>
 </div>
 </section>
-<!--service-content-end-->
-
-
-
-
-
-
-<div class="row m-5">
-
-  <!--Grid column-->
-  
-  <div class="col-md-6 ourstory">
-    <h2>OUR STORY</h2>
-    <iframe  src="https://www.youtube.com/embed/FpB1y-dZKqM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
-    <em><b><p>AIQ was founded on a vison that is transforming the world using 
-      geospatial artificial intelligence to
-      provide solutions to government, business security agencies and more.</p></b></em>
-      <a href="about.html"><button class="btn btn-read">Read More</button></a>
-
-  </div>
-
-  
-</div>
 
 
 <!--CALL US FOR OUR SOLUTIONS-->
+<section id="call">
 <div class="d-flex
-container bg-dark text-white btn-cta p-4 my-5">
-<div class="d-flex contact-items">
+container  call-text my-5">
 <h4 class="">Want to contact us for our solutions?</h4>
-<a href="contactus.html"><button type="button" class="btn btnclick ml-2">Click here</button></a>
+<button href="contactus.html" type="button" class="btn btnclick ml-2">Click here</button>
 </div>
-</div>
+</section>
 
 
  <!--UPDATE SECTION-->
@@ -392,101 +423,151 @@ container bg-dark text-white btn-cta p-4 my-5">
   </div>
 </div>
 
- 
 
+  <!--footer--------------------------->
+  <footer id="footer" class="footer-1">
+    <div class="main-footer widgets-dark typo-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="widget subscribe no-box">
+              <h5 class="widget-title">AIQ</h5>
+              <p>About the company, little discription will goes here..</p>
+            </div>
+          </div>
 
-<!-- Footer -->
-<footer class="page-footer font-small text-white">
-  <!-- Footer Elements -->
-  <div class="container ">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="widget no-box">
+              <h5 class="widget-title">Menu<span></span></h5>
+              <ul class="thumbnail-widget">
+                <li>
+                  <div class="thumb-content">
+                    <a href="#.">Home</a>
+                  </div>
+                </li>
+                <li>
+                  <div class="thumb-content">
+                    <a href="#.">About</a>
+                  </div>
+                </li>
+                <li>
+                  <div class="thumb-content">
+                    <a href="#.">What We do</a>
+                  </div>
+                </li>
+                <li>
+                  <div class="thumb-content">
+                    <a href="#.">Who We Serve</a>
+                  </div>
+                </li>
+                <li>
+                  <div class="thumb-content">
+                    <a href="#.">Latest Updates</a>
+                  </div>
+                </li>
+                <li>
+                  <div class="thumb-content"><a href="#.">Contact</a></div>
+                </li>
+              </ul>
+            </div>
+          </div>
 
-    <!-- Grid row-->
-    <div class="row" >
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="widget no-box">
+              <h5 class="widget-title">
+                Solutions And Services<span></span>
+              </h5>
+              <p>Get access to our proven solutions and services</p>
+              <a class="btn" href="https://bit.ly/3m9avif" target="_blank"
+                >Click Here</a
+              >
+            </div>
+          </div>
 
-      <!-- Grid column -->
-      <div class="col-md-12">
-        <div class="mb-5 flex-center text-center">
+          <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="widget no-box">
+              <h5 class="widget-title">Contact Us<span></span></h5>
 
-          <h5 class="p-5">FOLLOW US ON</h5>
+              <p>
+                <a href="mailto:info@domain.com" title="glorythemes"
+                  >aiq@infor.ng</a
+                >
+              </p>
+              <ul class="social-footer2">
+                <li class="youtube text-white">
+                  <a
+                    class="fa fa-youtube fa-lg text- fa-2x"
+                    aria-hidden="true"
+                    title="youtube"
+                    target="_blank"
+                    href="https://youtube.com"
+                    width="30"
+                    height="30"
+                    ><i alt="youtube" src=""></i>
+                  </a>
+                </li>
 
-          <hr>
-          <!-- Facebook -->
-          <a href="#" class="fb-icon"> 
-            <i class="fa fa-facebook-f fa-lg white-text mr-md-5 fa-2x"> </i>
-          </a>
+                <li class="facebook">
+                  <a
+                    class="fa fa-facebook fa-lg text- fa-2x"
+                    aria-hidden="true"
+                    title="facebook"
+                    target="_blank"
+                    href="https://facebook.com"
+                  >
+                  </a>
+                </li>
 
-          <!--Twitter-->
-          <a href="#" class="tw-icon">
-            <i class="fa fa-twitter white-text mr-md-5 fa-2x" aria-hidden="true"></i>
-          </a>
+                <li class="twitter">
+                  <a
+                    class="fa fa-twitter fa-lg text- fa-2x"
+                    aria-hidden="true"
+                    title="twitter"
+                    target="_blank"
+                    href="https://twitter.com"
+                  >
+                  </a>
+                </li>
 
-          <!--Linkedin -->
-          <a href="#" class="li-icon">
-            <i class="fa fa-linkedin-square fa-lg white-text mr-md-5 fa-2x" aria-hidden="true"></i>
-             </a>
+                <li class="instagram">
+                  <a
+                    class="fa fa-instagram fa-lg text- fa-2x"
+                    aria-hidden="true"
+                    title="instagram"
+                    target="_blank"
+                    href="https://instagram.com"
+                  >
+                  </a>
+                </li>
+                <i class="" aria-hidden="true"></i>
 
-             <!--Instagram-->
-          <a href="#" class="ins-icon">
-            <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x" aria-hidden="true"></i>
-          </a>
-
-          <!--Youtube-->
-          <a href="#" class="yt-icon">
-            <i class="fa fa-youtube white-text mr-md-5 fa-2x" aria-hidden="true"></i>
-          </a>
-          
-          <!--Email-->
-          <a href="#" class="em-icon">
-            <i class="fa fa-envelope fa-lg white-text fa-2x" aria-hidden="true"></i>
-             </a>
+                <li class="linkedin">
+                  <a
+                    class="fa fa-linkedin fa-lg text- fa-2x"
+                    aria-hidden="true"
+                    title="linkedin"
+                    target="_blank"
+                    href="https://linkedin.com"
+                  >
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
-      <!-- Grid column -->
-
     </div>
-    <!-- Grid row-->
 
-  </div>
-  
-  <hr>
-<div id="footer-items"> 
-  <div class="footer-container">
-    <div class="footer-item d-block"><a href="index.html">
-    <img  src="images/AIQ LOGO.svg" alt="" style="width:50px; margin: auto; "></a>
-    <h6>ARITIFICIAL INTELLIGENCE QUOTIENT</h6></div>
-    <div class="footer-item"><h5>MENU</h5>
-      <p><a href="index.html">Home</a></p>
-      <p><a href="about.html">About</a></p>
-      <p><a href="whatwedo.html">Whate we do</a></p>
+    <div class="footer-copyright">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <p>Copyright Company Name © 2022. All rights reserved.</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="footer-item"><h5>SERVICES</h5>
-      <p><a href="whatwedo.html">Remote sensing</a></p>
-      <p><a href="whatwedo.html">Geospatial Analysis</a></p>
-      <p><a href="whatwedo.html">High Resolution Satellite Imagery</a></p>
-      <p><a href="whatwedo.html">Who we serve</a></p>
-    </div>
-    <div class="footer-item"><h5>Contact Address</h5>
-      <p><a>No. 1 Ademola Onakomaiya Street,<br>
-        Off MM Alkali, Citec Villa,<br>
-        4th Avenue Gwarinpa,<br>
-        Abuja, Nigeria.</a></p>
-      <p><a>+234 703 330 1053 <br>
-        +234 708 080 7085
-        </a></p>
-      <p><a">aiq@infor.ng</a></p>
-
-    </div>
-  </div>
-</div>
-<hr>
-
-
-  <div class="footer-copyright text-center py-3">© 2021-2022 Copyright:
-    <a href="#" class="text-white"> aiq.ng</a>
-  </div>
-  
-
-</footer>
+  </footer>
 
 
 
