--- a/whatwedo.html
+++ b/whatwedo.html
@@ -172,96 +172,148 @@
 
 
 <!-- Footer --><!-- Footer -->
-<footer class="page-footer font-small text-white">
-  <!-- Footer Elements -->
-  <div class="container ">
+<footer id="footer" class="footer-1">
+  <div class="main-footer widgets-dark typo-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="widget subscribe no-box">
+            <h5 class="widget-title">AIQ<span></span></h5>
+            <p>About the company, little discription will goes here..</p>
+          </div>
+        </div>
 
-    <!-- Grid row-->
-    <div class="row" >
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="widget no-box">
+            <h5 class="widget-title">Menu<span></span></h5>
+            <ul class="thumbnail-widget">
+              <li>
+                <div class="thumb-content">
+                  <a href="#.">Home</a>
+                </div>
+              </li>
+              <li>
+                <div class="thumb-content">
+                  <a href="#.">About</a>
+                </div>
+              </li>
+              <li>
+                <div class="thumb-content">
+                  <a href="#.">What We do</a>
+                </div>
+              </li>
+              <li>
+                <div class="thumb-content">
+                  <a href="#.">Who We Serve</a>
+                </div>
+              </li>
+              <li>
+                <div class="thumb-content">
+                  <a href="#.">Latest Updates</a>
+                </div>
+              </li>
+              <li>
+                <div class="thumb-content"><a href="#.">Contact</a></div>
+              </li>
+            </ul>
+          </div>
+        </div>
 
-      <!-- Grid column -->
-      <div class="col-md-12">
-        <div class="mb-5 flex-center text-center">
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="widget no-box">
+            <h5 class="widget-title">
+              Solutions And Services<span></span>
+            </h5>
+            <p>Get access to our solutions and services</p>
+            <a class="btn" href="https://bit.ly/3m9avif" target="_blank"
+              >Click Here</a
+            >
+          </div>
+        </div>
 
-          <h5 class="p-5">FOLLOW US ON</h5>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="widget no-box">
+            <h5 class="widget-title">Contact Us<span></span></h5>
 
-          <hr>
-          <!-- Facebook -->
-          <a href="#" class="fb-icon"> 
-            <i class="fa fa-facebook-f fa-lg white-text mr-md-5 fa-2x"> </i>
-          </a>
+            <p>
+              <a href="mailto:info@domain.com" title="glorythemes"
+                >aiq@infor.ng</a
+              >
+            </p>
+            <ul class="social-footer2">
+              <li class="youtube text-white">
+                <a
+                  class="fa fa-youtube fa-lg text- fa-2x"
+                  aria-hidden="true"
+                  title="youtube"
+                  target="_blank"
+                  href="https://youtube.com"
+                  width="30"
+                  height="30"
+                  ><i alt="youtube" src=""></i>
+                </a>
+              </li>
 
-          <!--Twitter-->
-          <a href="#" class="tw-icon">
-            <i class="fa fa-twitter white-text mr-md-5 fa-2x" aria-hidden="true"></i>
-          </a>
+              <li class="facebook">
+                <a
+                  class="fa fa-facebook fa-lg text- fa-2x"
+                  aria-hidden="true"
+                  title="facebook"
+                  target="_blank"
+                  href="https://facebook.com"
+                >
+                </a>
+              </li>
 
-          <!--Linkedin -->
-          <a href="#" class="li-icon">
-            <i class="fa fa-linkedin-square fa-lg white-text mr-md-5 fa-2x" aria-hidden="true"></i>
-             </a>
+              <li class="twitter">
+                <a
+                  class="fa fa-twitter fa-lg text- fa-2x"
+                  aria-hidden="true"
+                  title="twitter"
+                  target="_blank"
+                  href="https://twitter.com"
+                >
+                </a>
+              </li>
 
-             <!--Instagram-->
-          <a href="#" class="ins-icon">
-            <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x" aria-hidden="true"></i>
-          </a>
+              <li class="instagram">
+                <a
+                  class="fa fa-instagram fa-lg text- fa-2x"
+                  aria-hidden="true"
+                  title="instagram"
+                  target="_blank"
+                  href="https://instagram.com"
+                >
+                </a>
+              </li>
+              <i class="" aria-hidden="true"></i>
 
-          <!--Youtube-->
-          <a href="#" class="yt-icon">
-            <i class="fa fa-youtube white-text mr-md-5 fa-2x" aria-hidden="true"></i>
-          </a>
-          
-          <!--Email-->
-          <a href="#" class="em-icon">
-            <i class="fa fa-envelope fa-lg white-text fa-2x" aria-hidden="true"></i>
-             </a>
+              <li class="linkedin">
+                <a
+                  class="fa fa-linkedin fa-lg text- fa-2x"
+                  aria-hidden="true"
+                  title="linkedin"
+                  target="_blank"
+                  href="https://linkedin.com"
+                >
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
-      <!-- Grid column -->
-
-    </div>
-    <!-- Grid row-->
-
-  </div>
-  
-  <hr>
-<div id="footer-items"> 
-  <div class="footer-container">
-    <div class="footer-item d-block"><a href="index.html">
-    <img  src="images/AIQ LOGO.svg" alt="" style="width:100px; margin: auto; "></a>
-    <h6>ARITIFICIAL INTELLIGENCE QUOTIENT</h6></div>
-    <div class="footer-item"><h5>MENU</h5>
-      <p><a href="index.html">Home</a></p>
-      <p><a href="about.html">About</a></p>
-      <p><a href="whatwedo.html">Whate we do</a></p>
-    </div>
-    <div class="footer-item"><h5>SERVICES</h5>
-      <p><a href="whatwedo.html">Remote sensing</a></p>
-      <p><a href="whatwedo.html">Geospatial Analysis</a></p>
-      <p><a href="whatwedo.html">High Resolution Satellite Imagery</a></p>
-      <p><a href="whatwedo.html">Who we serve</a></p>
-    </div>
-    <div class="footer-item"><h5>Contact Address</h5>
-      <p><a>No. 1 Ademola Onakomaiya Street,<br>
-        Off MM Alkali, Citec Villa,<br>
-        4th Avenue Gwarinpa,<br>
-        Abuja, Nigeria.</a></p>
-      <p><a>+234 703 330 1053 <br>
-        +234 708 080 7085
-        </a></p>
-      <p><a">aiq@infor.ng</a></p>
-
     </div>
   </div>
-</div>
-<hr>
 
-
-  <div class="footer-copyright text-center py-3">© 2021-2022 Copyright:
-    <a href="#" class="text-white"> aiq.ng</a>
+  <div class="footer-copyright">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p>Copyright Company Name © 2022. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
   </div>
-  
-
 </footer>
 
 
