--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
 
   <div class="col-md-4 ml-lg-2">
 
-    <img src="images/landing1.png" class="img-fluid rounded mb-3" 
+    <img src="images/ai 2.png" class="img-fluid rounded mb-3" 
       alt="ai">
 
   </div>
@@ -220,7 +220,8 @@ container bg-dark text-white btn-cta p-4 my-5 text-center products-services">
         <div class="col-xs-12 col-sm-6 col-md-3">
           <div class="widget subscribe no-box">
             <h5 class="widget-title">AIQ<span></span></h5>
-            <p>About the company, little discription will goes here..</p>
+            <p>We are building solutions to tomorrow's challenges today
+              using geopspatial artificial intelligence.</p>
           </div>
         </div>
 
