--- a/index.html
+++ b/index.html
@@ -412,7 +412,8 @@ container  call-text my-5">
           <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="widget subscribe no-box">
               <h5 class="widget-title">AIQ<span></span></h5>
-              <p>About the company, little discription will goes here..</p>
+              <p>We are building solutions to tomorrow's challenges today
+                using geopspatial artificial intelligence.</p>
             </div>
           </div>
 
