--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@ container bg-dark text-white btn-cta p-4 my-5 text-center products-services">
 
 <!--OUR HISTORY-->
 
-<div class="mainhistory">
+<div class="mainhistory" id="history">
   <h1 class="p-4">OUR HISTORY</h1>
   </div>
    <div class=" row ourhistory container text-left my-5">
@@ -231,17 +231,17 @@ container bg-dark text-white btn-cta p-4 my-5 text-center products-services">
             <ul class="thumbnail-widget">
               <li>
                 <div class="thumb-content">
-                  <a href="#.">Home</a>
+                  <a href="index.html">Home</a>
                 </div>
               </li>
               <li>
                 <div class="thumb-content">
-                  <a href="#.">About</a>
+                  <a href="about.html">About</a>
                 </div>
               </li>
               <li>
                 <div class="thumb-content">
-                  <a href="#.">What We do</a>
+                  <a href="#">What We do</a>
                 </div>
               </li>
               <li>
@@ -251,11 +251,11 @@ container bg-dark text-white btn-cta p-4 my-5 text-center products-services">
               </li>
               <li>
                 <div class="thumb-content">
-                  <a href="#.">Latest Updates</a>
+                  <a href="#updates">Latest Updates</a>
                 </div>
               </li>
               <li>
-                <div class="thumb-content"><a href="#.">Contact</a></div>
+                <div class="thumb-content"><a href="contactus.html">Contact</a></div>
               </li>
             </ul>
           </div>
@@ -267,7 +267,7 @@ container bg-dark text-white btn-cta p-4 my-5 text-center products-services">
               Solutions And Services<span></span>
             </h5>
             <p>Get access to our solutions and services</p>
-            <a class="btn" href="https://bit.ly/3m9avif" target="_blank"
+            <a class="btn" href="#services" target="_blank"
               >Click Here</a
             >
           </div>
@@ -351,7 +351,7 @@ container bg-dark text-white btn-cta p-4 my-5 text-center products-services">
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <p>Copyright: AIQ Limited © 2022. All rights reserved.</p>
+          <p>Copyright Company Name © 2022. All rights reserved.</p>
         </div>
       </div>
     </div>
