--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         <h1>About Us</h1>
         <p>
           AIQ is a company that provides artificial intelligent solutions for defense-oriented organizations. Security Safety and Surveillance are our major focus areas. We provide professional services for both domestic and foreign oriented industries, government agencies and individuals, AIQ stands out as the most trusted and reliable source for secured interactions. We provide organizations with well-organized defense and intelligence solutions on geospatial artificial intelligence and other related technologies. 
-        </p>
-        <button>More Details</button>
+        </p> 
+        <a href="about.html"><button>More Details</button></a>
       </div>
       <!--about-model-img----->
       <div class="about-img">
@@ -339,7 +339,7 @@
     <p>AIQ was founded on a vison that is transforming the world using 
       geospatial artificial intelligence to
       provide solutions to government, business security agencies and more.</p>
-      <button href="about.html" class="btn btn-read">Read More</button>
+      <a href="about.html"><button class="btn btn-read">Read More</button></a>
 </div>
 </section>
 
