--- a/whatwedo.html
+++ b/whatwedo.html
@@ -179,7 +179,8 @@
         <div class="col-xs-12 col-sm-6 col-md-3">
           <div class="widget subscribe no-box">
             <h5 class="widget-title">AIQ<span></span></h5>
-            <p>About the company, little discription will goes here..</p>
+            <p>We are building solutions to tomorrow's challenges today
+              using geopspatial artificial intelligence.</p>
           </div>
         </div>
 
@@ -189,17 +190,17 @@
             <ul class="thumbnail-widget">
               <li>
                 <div class="thumb-content">
-                  <a href="#.">Home</a>
+                  <a href="index.html">Home</a>
                 </div>
               </li>
               <li>
                 <div class="thumb-content">
-                  <a href="#.">About</a>
+                  <a href="about.html">About</a>
                 </div>
               </li>
               <li>
                 <div class="thumb-content">
-                  <a href="#.">What We do</a>
+                  <a href="#">What We do</a>
                 </div>
               </li>
               <li>
@@ -209,11 +210,11 @@
               </li>
               <li>
                 <div class="thumb-content">
-                  <a href="#.">Latest Updates</a>
+                  <a href="#updates">Latest Updates</a>
                 </div>
               </li>
               <li>
-                <div class="thumb-content"><a href="#.">Contact</a></div>
+                <div class="thumb-content"><a href="contactus.html">Contact</a></div>
               </li>
             </ul>
           </div>
@@ -225,7 +226,7 @@
               Solutions And Services<span></span>
             </h5>
             <p>Get access to our solutions and services</p>
-            <a class="btn" href="https://bit.ly/3m9avif" target="_blank"
+            <a class="btn" href="#services" target="_blank"
               >Click Here</a
             >
           </div>
