--- a/whatwedo.html
+++ b/whatwedo.html
@@ -113,11 +113,11 @@
 <h1 class="p-5">WHAT WE DO</h1>
 </div>
 
-<!-- <div class="whatwedo2 ">
+<div class="whatwedo2 ">
 <h4 class="text-center p-3 mt-5 font-weight-bold">PRODUCT AND SERVICES</h4>
 <p class="text-center p-3 font-weight-bold">We offer the following solutions and services to agencies, governments, businesses and individuals.</p>
 </div>
-<div class="container grid services-items">
+<!-- <div class="container grid services-items">
 <div class="d-flex mb-2 service-img">
   <img src="service img/GEOAI.png" alt="">
   <div class="ml-3">
