--- a/whatwedo.html
+++ b/whatwedo.html
@@ -162,76 +162,69 @@
 <!-- whatwedo -->
 <section id="whatwedo5">
 <!-- what we do box 1-------------->
-<div class="wwd-box">
+<div class="wwd-box m-2">
   <!-- what-we-do-heading-->
 <h2>GEOAI</h2>
-  <img src="images2/nasa-Yj1M5riCKk4-unsplash.jpg" alt="" style="width:100%">
+  <img src="images2/earth.png" style="width:100%" alt="">
 <!-- what-we-d0-text -->
   <div class=" wwd-text ">
     <p>Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p> 
   </div>
 </div>
 <!-- what we do box 2-------------->
-<div class="wwd-box">
+<div class="wwd-box m-2">
   <!-- what-we-do-heading-->
-<h2>GEOAI</h2>
-  <img src="images2/nasa-Yj1M5riCKk4-unsplash.jpg" alt="" style="width:100%">
+<h2>GIDAD</h2>
+  <img src="images2/lukas-blazek-mcSDtbWXUZU-unsplash.jpg" style="width:100%" alt="" >
 <!-- what-we-d0-text -->
-  <div class="wwd-text">
-    <p>Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p> 
-  </div>
-</div>
-<!-- what we do box -------------->
-<div class="wwd-box">
-  <!-- what-we-do-heading-->
-<h2>GEOAI</h2>
-  <img src="images2/nasa-Yj1M5riCKk4-unsplash.jpg" alt="" style="width:100%">
-<!-- what-we-d0-text -->
-  <div class=" wwd-text ">
-    <p>Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p> 
-  </div>
-</div>
-<!-- what we do box -------------->
-<div class="wwd-box">
-  <!-- what-we-do-heading-->
-<h2>GEOAI</h2>
-  <img src="images2/nasa-Yj1M5riCKk4-unsplash.jpg" alt="" style="width:100%">
-<!-- what-we-d0-text -->
-  <div class=" wwd-text ">
-    <p>Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p> 
-  </div>
-</div>
-<!-- what we do box -------------->
-<div class="wwd-box">
-  <!-- what-we-do-heading-->
-<h2>GEOAI</h2>
-  <img src="images2/nasa-Yj1M5riCKk4-unsplash.jpg" alt="" style="width:100%">
-<!-- what-we-d0-text -->
-  <div class=" wwd-text ">
-    <p>Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p> 
-  </div>
-</div>
-<!-- what we do box -------------->
-<div class="wwd-box ">
-  <!-- what-we-do-heading-->
-<h2>GEOAI</h2>
-  <img src="images2/nasa-Yj1M5riCKk4-unsplash.jpg" alt="" style="width:100%">
-<!-- what-we-d0-text -->
-  <div class=" wwd-text ">
-    <p>Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p> 
-  </div>
-</div>
-<!-- what we do box -------------->
-<div class="wwd-box">
-  <!-- what-we-do-heading-->
-<h2>GEOAI</h2>
-  <img src="images2/nasa-Yj1M5riCKk4-unsplash.jpg" alt="" style="width:100%">
-<!-- what-we-d0-text -->
-  <div class=" wwd-text ">
-    <p>Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p> 
+<div class=" wwd-text ">
+    <p>Geospatial Intelligence and Data Analysis Database (focus on Geospatial Analysis and Workspaces for teams)</p> 
   </div>
 </div>
 
+<!-- what we do box 3-------------->
+<div class="wwd-box m-2">
+  <!-- what-we-do-heading-->
+<h2>HRSI</h2>
+ <img src="images2/nasa-Yj1M5riCKk4-unsplash.jpg" style="width:100%" alt="">
+<!-- what-we-d0-text -->
+  <div class=" wwd-text ">
+    <p>High resolution satellite imagery that can be used to improve decision making in all aspects of living ranging from Defence, environment and climate, agriculture, infrastructure engineering and government.</p> 
+  </div>
+</div>
+
+<!-- what we do box 4-------------->
+<div class="wwd-box m-2">
+  <!-- what-we-do-heading-->
+<h2>VAPT</h2>
+  <img src="images2/adi-goldstein-EUsVwEOsblE-unsplash.jpg" style="width:100%" alt="">
+<!-- what-we-d0-text -->
+  <div class=" wwd-text ">
+    <p>Vulnerability Assessment and Penetration Testing</p> 
+  </div>
+</div>
+
+<!-- what we do box 5-------------->
+<div class="wwd-box m-2">
+  <!-- what-we-do-heading-->
+<h2>SKY-MAKE</h2>
+  <img src="images2/markus-winkler-f57lx37DCM4-unsplash.jpg" alt="" style="width:100%">
+<!-- what-we-d0-text -->
+  <div class=" wwd-text ">
+    <p>Machine Learning And Knowledge Extraction</p> 
+  </div>
+</div>
+
+<!-- what we do box 6-------------->
+<div class="wwd-box  m-2">
+  <!-- what-we-do-heading-->
+<h2>DATA-CAMP</h2>
+  <img src="images2/chris-liverani-dBI_My696Rk-unsplash.jpg" alt="" style="width:100%">
+<!-- what-we-d0-text -->
+  <div class="wwd-text">
+    <p>Data Collection, Analysis and Mapping Platform Data Dashboards and Collection Interfaces</p> 
+  </div>
+</div>
 </section>
 
 
