--- a/whatwedo.html
+++ b/whatwedo.html
@@ -28,7 +28,7 @@
         class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
         aria-label="Toggle navigation"
       >
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon" style="background-color: #3da8e0"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="d-flex  navbar-nav ml-auto mt-2 mt-lg-0 px-5">
