--- a/whatwedo.html
+++ b/whatwedo.html
@@ -28,7 +28,7 @@
         class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
         aria-label="Toggle navigation"
       >
-        <span class="navbar-toggler-icon" style="background-color: #3da8e0"></span>
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="d-flex  navbar-nav ml-auto mt-2 mt-lg-0 px-5">
@@ -108,55 +108,16 @@
     </nav>
 
 
-<!--OUR COMPANY-->
+<!--WHAT-WE-DO-->
 <div class="mainwhatwedo">
 <h1 class="p-5">WHAT WE DO</h1>
 </div>
 
-<div class="whatwedo2 ">
-<h4 class="text-center p-3 mt-5 font-weight-bold">PRODUCT AND SERVICES</h4>
-<p class="text-center p-3 font-weight-bold">We offer the following solutions and services to agencies, governments, businesses and individuals.</p>
+<div class="whatwedo container mt-4 mb-4 text-center">
+<h4>PRODUCT AND SERVICES</h4>
+<p>We offer the following solutions and services to agencies, governments, businesses and individuals.</p>
 </div>
-<!-- <div class="container grid services-items">
-<div class="d-flex mb-2 service-img">
-  <img src="service img/GEOAI.png" alt="">
-  <div class="ml-3">
-    <h3>GEOAI</h3>
-   <p>Geospatial Artificial Intelligence (focus on Remote Sensing) AIQ uses remote sensing to gather information about human activity on earth acquired via the analysis of earth imagery and geospatial data that identifies, analyzes and usually shows physical features and spatially referenced activities.</p> 
-  </div>
-</div>
-<div class="d-flex mb-2 service-img">
-  <img src="service img/GIDAD.png" alt="">
-  <div class="ml-3">
-    <h3>GIDAD</h3>
-   <p>Geospatial Intelligence and Data Analysis Database (focus on Geospatial Analysis and Workspaces for teams)</p> 
-  </div>
-</div>
-<div class="d-flex mb-2 service-item">
-  <img src="service img/DATA CAMP.png" alt="">
-  <div class="ml-3">
-    <h3>DATA-CAMP</h3>
-   <p>
-    Data Collection, Analysis and Mapping Platform Data Dashboards and Collection Interfaces.</p> 
-  </div>
-</div>
-<div class=" d-flex mb-2 service-img">
-  <img src="service img/DATA PORTAL.png" alt="">
-  <div class="ml-3">
-    <h3>Data Portal</h3>
-   <p>
-    Geospatial Artificial Intelligence (focus on Remote Sensing).</p> 
-  </div>
-</div>
-<div class=" d-flex mb-2 service-img">
-  <img src="service img/HRSI.png" alt="" >
-  <div class=" ml-3">
-    <h3>HRSI</h3>
-   <p>
-    High resolution satellite imagery that can be used to improve decision making in all aspects of living ranging from Defence, environment and climate, agriculture, infrastructure engineering and government.</p> 
-  </div>
-</div>
-</div> -->
+
 <hr>
 
 <!-- whatwedo -->
