--- a/whatwedo.html
+++ b/whatwedo.html
@@ -30,6 +30,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="d-flex  navbar-nav ml-auto mt-2 mt-lg-0 px-5">
           <li class="nav-item active p-1">
@@ -110,7 +111,7 @@
 
 <!--WHAT-WE-DO-->
 <div class="mainwhatwedo">
-<h1 class="p-5">WHAT WE DO</h1>
+<h1>WHAT WE DO</h1>
 </div>
 
 <div class="whatwedo container mt-4 mb-4 text-center">
