--- a/whatwedo.html
+++ b/whatwedo.html
@@ -110,10 +110,13 @@
 
 
 <!--WHAT-WE-DO-->
-<div class="mainwhatwedo">
-<h1>WHAT WE DO</h1>
-</div>
 
+  <div class="mainservice">
+    <h1>WHAT WE DO</h1>
+  </div>
+
+
+<!-- PRODUCTION AND SERVICES -->
 <div class="whatwedo container mt-4 mb-4 text-center">
 <h4>PRODUCT AND SERVICES</h4>
 <p>We offer the following solutions and services to agencies, governments, businesses and individuals.</p>
