--- a/about.html
+++ b/about.html
@@ -112,31 +112,19 @@
 <!--OUR COMPANY-->
 
 
-<div class="mainourcompany">
+<section id="mainourcompany">
 <h1 class="p-5">OUR COMPANY</h1>
-
-</div>
-
-<hr class="my-5">
 
 
  <!--Grid row first container-->
- <div class="row container about-item">
+ <div class="c-about">
 
-  <!--Grid column-->
-
-  <div class="col-md-4 ml-lg-2">
-
-    <img src="images/ai 2.png" class="img-fluid rounded mb-3" 
+    <img src="images/ai 2.png" 
       alt="ai">
 
-  </div>
-
-<!--Grid column-->
 <div class="col-md-6 ml-lg-2 justify-content-left abouttext ">
 
-
-  <h3 class="text-left text-center font-weight-bold fadeIn " data-wow-delay="0.2s">
+  <h3>
   <em>
     <strong style="color: #3da8e0;">ABOUT US</strong>
   </em>
@@ -154,7 +142,8 @@
   <!--Grid column-->
 
 
-</div><br><br>
+</div>
+</section><br><br>
 <!--Grid row-->
 
 <div class="d-block
