--- a/whatwedo.html
+++ b/whatwedo.html
@@ -117,7 +117,7 @@
 
 
 <!-- PRODUCTION AND SERVICES -->
-<div class="whatwedo container mt-4 mb-4 text-center">
+<div class="whatwedo container text-center">
 <h4>PRODUCT AND SERVICES</h4>
 <p>We offer the following solutions and services to agencies, governments, businesses and individuals.</p>
 </div>
