--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
  <!--Grid row first container-->
  <div class="c-about">
 
-    <img src="images/ai 2.png" 
+    <img src="images2/andrea-de-santis-zwd435-ewb4-unsplash.jpg" 
       alt="ai">
 
 <div class="col-md-6 ml-lg-2 justify-content-left abouttext ">
