--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       <!--about-model-img----->
       <div class="about-img">
         <img
-          src="images/ai 2.png"
-          alt="model"
+          src="images2/andrea-de-santis-zwd435-ewb4-unsplash.jpg"
+          alt="model" width="500px"
         />
       </div>
     </section>
