--- a/contactus.html
+++ b/contactus.html
@@ -27,9 +27,11 @@
       <button
         class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
         aria-label="Toggle navigation"
+        style="background-color: #3da8e0 !important;"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="d-flex  navbar-nav ml-auto mt-2 mt-lg-0 px-5">
           <li class="nav-item active p-1">
