--- a/whatwedo.html
+++ b/whatwedo.html
@@ -27,6 +27,7 @@
       <button
         class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
         aria-label="Toggle navigation"
+        style="background-color: #3da8e0 !important;"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
