--- a/about.html
+++ b/about.html
@@ -209,15 +209,15 @@ container bg-dark text-white btn-cta p-4 my-5 text-center products-services">
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="widget subscribe no-box">
-            <h5 class="widget-title">AIQ<span></span></h5>
+          <div class="widget no-box">
+           <a href="index.html"> <img  src="images2/AIQ LOGO 1.svg" alt="" width="50px" style="fill: white ;"></a>
             <p>We are building solutions to tomorrow's challenges today
               using geopspatial artificial intelligence.</p>
           </div>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-3">
-          <div class="widget no-box">
+          <div class="widget no-box text-white">
             <h5 class="widget-title">Menu<span></span></h5>
             <ul class="thumbnail-widget">
               <li>
@@ -269,7 +269,7 @@ container bg-dark text-white btn-cta p-4 my-5 text-center products-services">
             <h5 class="widget-title">Contact Us<span></span></h5>
 
             <p>
-              <a href="mailto:info@domain.com" title="glorythemes"
+              <a href="mailto:info@domain.com" title="glorythemes" style="color:#163d52; font-weight:bold;"
                 >aiq@infor.ng</a
               >
             </p>
